[gd_scene load_steps=8 format=3 uid="uid://bm1aixqc5857j"]

[ext_resource type="Script" path="res://Assets/UI/Scripts/BallUI.gd" id="1_0oowy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsfsg"]
bg_color = Color(0.145098, 0.145098, 0.145098, 0.709804)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtbc4"]
bg_color = Color(0.870588, 0.811765, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knfs4"]
bg_color = Color(0.835294, 0.835294, 0.835294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f21to"]
bg_color = Color(1, 0.988235, 0.733333, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwtg3"]
bg_color = Color(0.631373, 0.623529, 0.376471, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntxff"]
bg_color = Color(0.835294, 0.835294, 0.835294, 0.431373)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
shadow_offset = Vector2(4, 4)

[node name="BallUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0oowy")

[node name="ChargeBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -288.0
offset_right = 64.0
offset_bottom = -32.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_rsfsg")
theme_override_styles/fill = SubResource("StyleBoxFlat_jtbc4")
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="ModeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(96, 32)
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.470588)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_knfs4")
theme_override_styles/hover = SubResource("StyleBoxFlat_f21to")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xwtg3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ntxff")
text = "AIM SHOT"
